syntax = "proto3";

package kessel.relations.v0;

import "google/api/annotations.proto";
import "relations/v0/common.proto";

option go_package = "ciam-rebac/api/relations/v0;v0";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.relations.v0";

service KesselLookupService {
    rpc LookupSubjects(LookupSubjectsRequest) returns (stream LookupSubjectsResponse) {
        option (google.api.http) = {
            get: "/v0/subjects"
        };
    };
}

message LookupSubjectsRequest {
    ObjectType subject_type = 1;
    optional string subject_relation = 2;
    string relation = 3;
    ObjectReference resource = 4;
    optional RequestPagination pagination = 5;
}

message LookupSubjectsResponse {
    SubjectReference subject = 1;
    ResponsePagination pagination = 2;
}